Use credentials in the playground

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "from twerk.models import Account\n",
     "\n",
-    "account = Account.from_url(browser)\n",
+    "account = Account.from_credentials(browser, username, password)\n",
     "\n",
     "account"
    ]
