Load defaults from environment

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -29,10 +29,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from getpass import getpass\n",
+    "from twerk.utils import get_credentials\n",
     "\n",
-    "username = input(\"Twitter username: \")\n",
-    "password = getpass(\"Twitter password: \")"
+    "username, password = get_credentials()\n",
+    "\n",
+    "username"
    ]
   },
   {
@@ -54,9 +55,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from twerk.views import Profile\n",
+    "from twerk.utils import get_seed_username\n",
     "\n",
-    "view = Profile(browser, username='RealMattCouch')\n",
+    "seed_username = get_seed_username()\n",
+    "\n",
+    "seed_username"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from twerk.views import Profile\n",
+    "from twerk.utils import get_seed_username\n",
+    "\n",
+    "view = Profile(browser, username=seed_username)\n",
     "\n",
     "view"
    ]
@@ -69,7 +84,7 @@
    "source": [
     "from twerk.views import ProfileMore\n",
     "\n",
-    "view = ProfileMore(browser, username='RealMattCouch')\n",
+    "view = ProfileMore(browser, username=seed_username)\n",
     "\n",
     "view"
    ]
@@ -82,10 +97,17 @@
    "source": [
     "from twerk.views import ProfileBlock\n",
     "\n",
-    "view = ProfileBlock(browser, username='RealMattCouch')\n",
+    "view = ProfileBlock(browser, username=seed_username)\n",
     "\n",
     "view"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
