Add delay to make login more reliable

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -16,9 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from splinter import Browser\n",
+    "from twerk.utils import get_browser\n",
     "\n",
-    "browser = Browser()\n",
+    "browser = get_browser()\n",
     "\n",
     "browser.visit(\"http://example.com\")"
    ]
