Add 'crawl' CLI command

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -93,6 +93,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.joined"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
