Parse properties from private Twitter profiles

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -149,6 +149,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "profile.following"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.followers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.likes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.joined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from twerk.views.private import ProfileMore\n",
     "\n",
     "profile_more = ProfileMore(browser, username=seed_username, credentials=credentials)\n",
