Add profile report view

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -127,6 +127,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from twerk.utils import get_seed_username\n",
+    "\n",
+    "seed_username = get_seed_username()\n",
+    "\n",
+    "seed_username"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from twerk.views.private import Profile\n",
     "\n",
     "profile = Profile(browser, username=seed_username, credentials=credentials)\n",
@@ -204,6 +217,44 @@
     "\n",
     "profile_block"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile_block.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from twerk.views.private import ProfileReport\n",
+    "\n",
+    "profile_report = ProfileReport(browser, username=seed_username, credentials=credentials)\n",
+    "\n",
+    "profile_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile_report.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
